--- a/Exercises/preamble.tex
+++ b/Exercises/preamble.tex
@@ -9,6 +9,7 @@
 \usepackage{booktabs} 
 \usepackage{subfig}  
 \usepackage[top=4cm, bottom=4cm]{geometry}
+\usepackage{amsmath}
 
 % Used for programming illustrations
 \input xy
