Added new preamble structure

--- a/Exercises/Ex1/latex/ex1.tex
+++ b/Exercises/Ex1/latex/ex1.tex
@@ -1,4 +1,6 @@
-\input{../../preamble.tex}
+\input{../../common/preamble.tex}
+\input{../../common/preamble-addon-listings.tex}
+\input{xy}
 
 \begin{document}
 
