Added plots and listing to tex doc

--- a/Exercises/Ex2/latex/ex2.tex
+++ b/Exercises/Ex2/latex/ex2.tex
@@ -11,4 +11,46 @@
 \pagebreak
 
 
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=0.83\textwidth]{../code/plotting/b.pdf}
+  \caption{Plot for case b).}
+  \label{fig:caseb}
+\end{figure}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=0.83\textwidth]{../code/plotting/c.pdf}
+  \caption{Plot for case c).}
+  \label{fig:casec}
+\end{figure}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=0.83\textwidth]{../code/plotting/d.pdf}
+  \caption{Plot for case d).}
+  \label{fig:cased}
+\end{figure}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=0.83\textwidth]{../code/plotting/e.pdf}
+  \caption{Plot for case e).}
+  \label{fig:casee}
+\end{figure}
+
+
+
+
+\section{Program listings} % (fold)
+\label{sec:program_listings}
+
+\lstinputlisting[%
+  caption={plot.py -- Used to generate the plots},
+  label={lst:plot},
+  language={Python}]
+  {../code/plotting/plot.py}
+
+% section program_listings (end)
+
 \end{document}
