--- a/Exercises/common/preamble.tex
+++ b/Exercises/common/preamble.tex
@@ -8,8 +8,9 @@
 \usepackage{subfig} % -------------------| Subfigures.
 \usepackage[a4paper]{geometry} % --------| Adjusting page margins.
 \usepackage{amsmath,amssymb,amsfonts} % -| Various math, including eqref.
-\usepackage{color} % --------------------| Allows defn. of custom colors.
+\usepackage{xcolor} % --------------------| Allows defn. of custom colors.
 \usepackage{babel}
+\usepackage{url}
 
 % XY-pic. Used for creating illustrations.
 \input xy
@@ -22,4 +23,3 @@
 % Changing section header fonts.
 \usepackage{sectsty}
 \allsectionsfont{\normalfont\sffamily}
-
