--- a/project/latex/beamerthementnuposter.sty
+++ b/project/latex/beamerthementnuposter.sty
@@ -104,7 +104,7 @@
     \begin{column}{.20\linewidth}
       \includegraphics[width=1.1\columnwidth,clip=true, trim=3cm 7.5cm 13.5cm 10cm]{institute}
     \end{column}
-    \begin{column}{.5\linewidth}
+    \begin{column}{.6\linewidth}
       \vskip2cm
       \centering
       %\usebeamercolor{title in headline}
@@ -113,7 +113,7 @@
       %\usebeamercolor{author in headline}
       {\color{fg} \Large{\insertauthor}\\[1ex]}
       %\usebeamercolor{institute in headline}
-      {\color{fg} \large{\insertinstitute}\\[1ex]}
+      %{\color{fg} \large{\insertinstitute}\\[1ex]}
       \vskip2cm
     \end{column}
     \begin{column}{.20\linewidth}
