--- a/project/latex/poster.tex
+++ b/project/latex/poster.tex
@@ -4,7 +4,7 @@
 %
 %--A0 beamer slide-------------------------------------------------------------
 \documentclass[final]{beamer}
-\usepackage[orientation=portrait,size=a0, scale=1.1]{beamerposter}
+\usepackage[orientation=portrait,size=a1, scale=1.1]{beamerposter}
 \geometry{hmargin=2.5cm}
 \usepackage[utf8]{inputenc}
 \linespread{1.1}
@@ -60,7 +60,7 @@ The Gullfaks Field in the North sea consist of many reservoirs, and some of them
 
 
 \section{Communication in the Lower Brent Group}
-The Gullfaks H1 segment is an almost isolated part of the main Gullfaks field. (skal vi ha med figur av hele??) It had an estimated STOOIP of $20,3 \,M\mathrm{Sm^3}$ oil and a recovery factor around 57\%. It is a part of the lower Brent Group,which is oil-filled part in the western and central parts of the Gullfaks structure. We see pretty good internal communication in this segment due to little internal faulting, and the formation is relatively homogenous.
+The Gullfaks H1 segment is an almost isolated part of the main Gullfaks field. It had an estimated STOOIP of $20,3 \,M\mathrm{Sm^3}$ oil and a recovery factor around 57\%. It is a part of the lower Brent Group,which is oil-filled part in the western and central parts of the Gullfaks structure. We see pretty good internal communication in this segment due to little internal faulting, and the formation is relatively homogenous.
 
 
 
@@ -87,11 +87,11 @@ Production data from this model is shown as a reference alongside data for other
 
 
 
-
+\vskip7ex
 \section{Impact of perforations}
 Two modifications to the perforations in the wells were tested:
 \begin{itemize}
-  \item All \texttt{OPEN} sections were changed to \texttt{SHUT}, and vice versa.
+  \item All \texttt{OPEN} sections were set to \texttt{SHUT}, and vice versa.
   \item All sections were set to open.
 \end{itemize}
 The results of both of these simulations are shown in Figure~\ref{fig:perfs_wopt_wwct}.
@@ -119,13 +119,15 @@ Plots of the oil production rate for the two production wells in the base case m
 
 As expected, we see that the oil production rate drops to almost 0 after a relatively short time. This is because zero transmissibility across faults in a reservoir with many faults means that every well can only produce from a very small area around it.
 
+In Figure~\ref{fig:faults_3d} we see one of the reasons why the production rate for the A-1H well is so much lower when the faults are closed. The large red area in the upper right part of the right image has very high $S_o$, even after producing for years. This is due to faults cutting the area off from the producing wells.
+
+
 \begin{figure}[ht]
-  \hspace{-10ex}\input{plots/faults_opt.tikz}
+  \input{plots/faults_opt.tikz}
   \caption{}
   \label{fig:faults_opr}
 \end{figure}
 
-In Figure~\ref{fig:faults_3d} we see one of the reasons why the production rate for the A-1H well is so much lower when the faults are closed. The large red area in the upper right part of the right image has very high $S_o$, even after producing for years. This is due to faults cutting the area off from the producing wells.
 
 \begin{figure}[H]
   \begin{center}
@@ -138,9 +140,18 @@ In Figure~\ref{fig:faults_3d} we see one of the reasons why the production rate 
 
 
 
+\subsection{Net Present Value} % (fold)
+\begin{center}
+  $NPV_{\text{new wells}} - NPV_{\text{new wells, faults closed}}  = 643.9 \, \mathrm{MNOK}$
+\end{center}
 
 
 
+\end{multicols}
+\end{frame}
+
+\begin{frame}
+\begin{multicols}{3}
 
 
 
@@ -180,6 +191,13 @@ From Figure~\ref{fig:new_wells_field} we see that the new wells lets us produce 
 
 \subsection{Net Present Value} % (fold)
 
+\begin{center}
+  $NPV_{N-1} = 516.7 \, \mathrm{MNOK}$
+
+  $NPV_{N-3} = 490.5 \, \mathrm{MNOK}$
+
+  $NPV_{N-4} = 582.2 \, \mathrm{MNOK}$
+\end{center}
 
 
 
@@ -204,7 +222,7 @@ When it is injected into the reservoir it reduces the permeability in the invade
 \end{figure}
 
 
-
+\vskip5ex
 \subsection{Eclipse representation} % (fold)
 To get the effects of the Abio Gel in the Eclipse model we used a tracer. The property calculator in FloViz was then used to create a new property equal to some fraction of the permeability, dependent on the amount of tracer found in the blocks. Blocks with a large amount of tracer had the property set to a small fraction, blocks with no tracer were left unaltered. This values of this new property was then applied as permeability in the simulation grid. The resulting altered permeability is shown in Figure~\ref{fig:abio_area}.
 
@@ -217,10 +235,9 @@ To get the effects of the Abio Gel in the Eclipse model we used a tracer. The pr
 
 \begin{figure}[H]
   \centering
-  \includegraphics[clip=true, trim=6cm 7cm 11cm 13cm, width=0.8\columnwidth]{images/before_permedit.png}
-
-  \includegraphics[clip=true, trim=6cm 7cm 11cm 13cm, width=0.8\columnwidth]{images/after_permedit.png}
-  \caption{Area affected by the tracer, color mapped according to permeability (blue is lowest) before (top) and after (bottom) changing the permeability.}
+  \includegraphics[clip=true, trim=12cm 7cm 13cm 13cm, width=0.5\columnwidth]{images/before_permedit.png}
+  \includegraphics[clip=true, trim=12cm 7cm 13cm 13cm, width=0.5\columnwidth]{images/after_permedit.png}
+  \caption{Area affected by the tracer, color mapped according to permeability (blue is lowest) before (left) and after (right) changing the permeability.}
   \label{fig:abio_area}
 \end{figure}
 
@@ -235,6 +252,9 @@ Figure~\ref{fig:abio_change} shows that injecting the Abio gel significantly inc
 \end{figure}
 
 \subsection{Net Present Value}
+\begin{center}
+  $NPV_{Abio} = 206.5 \, \mathrm{MNOK}$
+\end{center}
 
 
 %==============================================================================
