Added exam notes

--- a/project/latex/beamerthementnuposter.sty
+++ b/project/latex/beamerthementnuposter.sty
@@ -102,7 +102,7 @@
   \leavevmode
   \begin{columns}
     \begin{column}{.20\linewidth}
-      \includegraphics[width=1.1\columnwidth,clip=true, trim=3cm 7.5cm 13.5cm 10cm]{institute}
+      \includegraphics[width=1.1\columnwidth,clip=true, trim=3cm 7.5cm 13.5cm 10cm]{institute.eps}
     \end{column}
     \begin{column}{.6\linewidth}
       \vskip2cm
