--- a/exam/latex/ressim.tex
+++ b/exam/latex/ressim.tex
@@ -9,10 +9,13 @@
   \maketitle
   \clearpage
 
+\input{parts/summary.tex} \clearpage
 \input{parts/gullfaks-project.tex} \clearpage
+\input{parts/reservoir_models.tex} \clearpage
 \input{parts/equations.tex} \clearpage
 \input{parts/diffusivity-equation.tex} \clearpage
 \input{parts/solution-methods.tex} \clearpage
 \input{parts/terms.tex} \clearpage
+\input{parts/curves.tex} \clearpage
 
 \end{document}
